ingress/nginx/frontend.yml
apiVersion:apps/v1
kind:Deployment
metadata:
  name: frontend
spec:
  replicas:1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: httpd
        ports:
        - containerPort:80
---

apiVersion:v1
kind:Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
