ingress/nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: stravixglobaltech.com
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /httpd
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
